# daw_finale_project

./: CMakeLists.txt  audio_processing.cpp  audio_processing.hpp  error_handling.cpp  error_handling.hpp  main.cpp
